Resolves: tdf#100396 handle unspecified WEEKDAY arguments and support new ones

... introduced with Excel 2010.

Change-Id: Ide47fea0e8bc109dc47f591c33ec1d1a13c08d72